--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  width: 100%;
+  height: 100%;
+  background-image: url("./Assets/login-back.jpg");
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +14,74 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+:root {
+  --bs-blue: #ffcb38;
+  --bs-indigo: #564ab1;
+  --bs-purple: #6f42c1;
+  --bs-pink: #e83e8c;
+  --bs-red: #f46a6a;
+  --bs-orange: #f1734f;
+  --bs-yellow: #f1b44c;
+  --bs-green: #34c38f;
+  --bs-teal: #050505;
+  --bs-cyan: #50a5f1;
+  --bs-black: #000;
+  --bs-white: #fff;
+  --bs-gray: #74788d;
+  --bs-gray-dark: #343a40;
+  --bs-gray-100: #f8f9fa;
+  --bs-gray-200: #eff2f7;
+  --bs-gray-300: #f6f6f6;
+  --bs-gray-400: #ced4da;
+  --bs-gray-500: #adb5bd;
+  --bs-gray-600: #74788d;
+  --bs-gray-700: #495057;
+  --bs-gray-800: #343a40;
+  --bs-gray-900: #212529;
+  --bs-primary: #ffcb38;
+  --bs-secondary: #74788d;
+  --bs-success: #34c38f;
+  --bs-info: #50a5f1;
+  --bs-warning: #f1b44c;
+  --bs-danger: #f46a6a;
+  --bs-pink: #e83e8c;
+  --bs-light: #eff2f7;
+  --bs-dark: #343a40;
+  --bs-primary-rgb: 85, 110, 230;
+  --bs-secondary-rgb: 116, 120, 141;
+  --bs-success-rgb: 52, 195, 143;
+  --bs-info-rgb: 80, 165, 241;
+  --bs-warning-rgb: 241, 180, 76;
+  --bs-danger-rgb: 244, 106, 106;
+  --bs-pink-rgb: 232, 62, 140;
+  --bs-light-rgb: 239, 242, 247;
+  --bs-dark-rgb: 52, 58, 64;
+  --bs-white-rgb: 255, 255, 255;
+  --bs-black-rgb: 0, 0, 0;
+  --bs-body-color-rgb: 73, 80, 87;
+  --bs-body-bg-rgb: 248, 248, 251;
+  --bs-font-sans-serif: "Nunito", sans-serif;
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-size: 15px;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 1.5;
+  --bs-body-color: #000;
+  --bs-body-bg: #f8f8fb;
+  --bs-border-width: 1px;
+  --bs-border-style: solid;
+  --bs-border-color: #eff2f7;
+  --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+  --bs-border-radius: 0.25rem;
+  --bs-border-radius-sm: 0.2rem;
+  --bs-border-radius-lg: 0.4rem;
+  --bs-border-radius-xl: 1rem;
+  --bs-border-radius-2xl: 2rem;
+  --bs-border-radius-pill: 50rem;
+  --bs-link-color: #ffcb38;
+  --bs-link-hover-color: #4458b8;
+  --bs-code-color: #e83e8c;
+  --bs-highlight-bg: #fcf8e3;
 }
