--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   height: 100%;
   background-image: url("./Assets/login-back.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
